fixed nav bar link to projects on mobile

--- a/main.css
+++ b/main.css
@@ -34,6 +34,10 @@ body {
     background-image: linear-gradient(to top, rgba(0,64,193,1), rgba(255,0,0,0));
 }
 
+.nav-gap {
+    padding-top: 56px;
+}
+
 /* mobile styling */
 @media only screen and (max-width: 767px) {
     .fit-line {
